--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">INTRO</a></li>
-					<li><a href="#work">WORK</a></li>
 					<li><a href="#portfolio">POTFOLIO</a></li>
+					<li><a href="#work">WORK</a></li>
 					<li><a href="#contact">CONTACT</a></li>
 				</ul>
 			</nav>
@@ -30,47 +30,12 @@
 								<h1>Hi, I'm <strong>Prakash Basagi</strong>.</h1>
 							</header>
 							<p>I'm a <strong>Full Stack Developer</strong></p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 						</div>
 					</div>
 				</div>
 			</article>
 
-		<!-- Work -->
-			<article id="work" class="wrapper style2">
-				<div class="container">
-					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Click on each to see detail</p>
-					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Stuff 1</h3>
-								<p>details 1</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Stuff 2</h3>
-								<p>Details 2</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Stuff 3</h3>
-								<p>Details 3</p>
-							</section>
-						</div>
-					</div>
-					<footer>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
-				</div>
-			</article>
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
@@ -82,53 +47,83 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Project 1</a></h3>
-								<p>Details...</p>
+								<a href="https://github.com/PrakashBhasagi/SpringBoot-CURD-Operation/blob/main/README.md" class="image featured"><img src="images/crud.PNG" alt="SpringBoot-CURD-Operation" /></a>
+								<h3><a href="https://github.com/PrakashBhasagi/SpringBoot-CURD-Operation/blob/main/README.md">SpringBoot CURD Operations</a></h3>
+								<p>Demonstrated CRUD Operations<br>API and UI</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Project 2</a></h3>
-								<p>Details...</p>
+								<a href="https://github.com/PrakashBhasagi/TodoList" class="image featured"><img src="images/todolist.PNG" alt="todolist" /></a>
+								<h3><a href="https://github.com/PrakashBhasagi/TodoList">TodoList</a></h3>
+								<p>Demo for to do task list<br> Authenticated using Login</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Project 3</a></h3>
-								<p>Details...</p>
+								<a href="https://github.com/PrakashBhasagi/SpringBoot-Microservices" class="image featured"><img src="images/microservice.PNG" alt="SpringBoot-Microservices" /></a>
+								<h3><a href="https://github.com/PrakashBhasagi/SpringBoot-Microservices">MicroServices</a></h3>
+								<p>SpringBoot MicroServices demo</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Project 4</a></h3>
-								<p>Details....</p>
+								<a href="https://github.com/PrakashBhasagi/Python-CheatSheet" class="image featured"><img src="images/python.PNG" alt="Python-CheatSheet" /></a>
+								<h3><a href="https://github.com/PrakashBhasagi/Python-CheatSheet">Python Cheat Sheet</a></h3>
+								<p>One stop for glancing</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Project 5</a></h3>
-								<p>Details...</p>
+								<a href="https://github.com/PrakashBhasagi/Java-CheatSheet" class="image featured"><img src="images/java.PNG" alt="Java-CheatSheet" /></a>
+								<h3><a href="https://github.com/PrakashBhasagi/Java-CheatSheet">Java Cheat Sheet</a></h3>
+								<p>One stop for glancing</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Project 6</a></h3>
-								<p>Details...</p>
+								<a href="https://github.com/PrakashBhasagi/SpringBoot-Get-Started" class="image featured"><img src="images/springbooot.PNG" alt="SpringBoot-Get-Started"/></a>
+								<h3><a href="https://github.com/PrakashBhasagi/SpringBoot-Get-Started">SpringBoot getting Started</a></h3>
+								<p>One stop for glancing</p>
 							</article>
 						</div>
 					</div>
 					<footer>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+						
+						<a href="#work" class="button large scrolly">Learn about what I do</a>
+						
 					</footer>
 				</div>
 			</article>
-
+				<!-- Work -->
+				<article id="work" class="wrapper style2">
+					<div class="container">
+						<header>
+							<h2>Here's all the stuff I do.</h2>
+							<p>Click on each to see detail</p>
+						</header>
+						<div class="row aln-center">
+							<div class="col-4 col-6-medium col-12-small">
+								<section class="box style1">
+									<span class="icon featured fa-comments"></span>
+									<h3>Blog</h3>
+									<p><a href="blogs.html">Click here to visit</a></p>
+								</section>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<section class="box style1">
+									<span class="icon solid featured fa-camera-retro"></span>
+									<h3>Free Lancing</h3>
+									<p>Feel free to contact </p>
+								</section>
+							</div>
+						</div>
+						<footer>
+							<a href="#contact" class="button large scrolly">Get in touch with me</a>
+						</footer>
+					</div>
+				</article>
+	
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
@@ -164,11 +159,10 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/prakash-basagi/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/PrakashBhasagi" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.instagram.com/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<hr />
 						</div>
@@ -176,6 +170,7 @@
 					<footer>
 						<ul id="copyright">
 							<li>&copy; PRAKASH BASAGI.</li>
+							<li>prakashbhasagi14357@gmail.com</li>
 						</ul>
 					</footer>
 				</div>
