--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/PrakashBhasagi/TodoList" class="image featured"><img src="images/todolist.PNG" alt="todolist" /></a>
+								<a href="https://github.com/PrakashBhasagi/TodoList" class="image featured"><img src="images/todo.PNG" alt="todolist" /></a>
 								<h3><a href="https://github.com/PrakashBhasagi/TodoList">TodoList</a></h3>
 								<p>Demo for to do task list<br> Authenticated using Login</p>
 							</article>
