--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
             <div class="row">
     <div class="col-6 col-6-medium col-12-small">
         <article class="box style2">
-            <a href="https://github.com/PrakashBhasagi/Python-CheatSheet" class="image featured"><img src="images/python.PNG" alt="Python-CheatSheet" /></a>
+            <a href="blogs/python-cheetsheet/index.html" class="image featured"><img src="images/python.PNG" alt="Python-CheatSheet" /></a>
             <h3><a href="https://github.com/PrakashBhasagi/Python-CheatSheet">Python Cheat Sheet</a></h3>
             <p>One stop for glancing</p>
         </article>
@@ -30,7 +30,7 @@
     </div>
     <div class="col-6 col-6-medium col-12-small">
         <article class="box style2">
-            <a href="https://github.com/PrakashBhasagi/SpringBoot-Get-Started" class="image featured"><img src="images/springbooot.PNG" alt="SpringBoot-Get-Started"/></a>
+            <a href="blogs/getting_started/index.html" class="image featured"><img src="images/springbooot.PNG" alt="SpringBoot-Get-Started"/></a>
             <h3><a href="https://github.com/PrakashBhasagi/SpringBoot-Get-Started">SpringBoot getting Started</a></h3>
             <p>One stop for glancing</p>
         </article>
