--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/PrakashBhasagi/Python-CheatSheet" class="image featured"><img src="images/python.PNG" alt="Python-CheatSheet" /></a>
-								<h3><a href="https://github.com/PrakashBhasagi/Python-CheatSheet">Python Cheat Sheet</a></h3>
+								<a href="blogs/python-cheetsheet/index.html" class="image featured"><img src="images/python.PNG" alt="Python-CheatSheet" /></a>
+								<h3><a href="blogs/python-cheetsheet/index.html">Python Cheat Sheet</a></h3>
 								<p>One stop for glancing</p>
 							</article>
 						</div>
@@ -82,8 +82,8 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/PrakashBhasagi/SpringBoot-Get-Started" class="image featured"><img src="images/springbooot.PNG" alt="SpringBoot-Get-Started"/></a>
-								<h3><a href="https://github.com/PrakashBhasagi/SpringBoot-Get-Started">SpringBoot getting Started</a></h3>
+								<a href="blogs/getting_started/index.html" class="image featured"><img src="images/springbooot.PNG" alt="SpringBoot-Get-Started"/></a>
+								<h3><a href="blogs/getting_started/index.html">SpringBoot getting Started</a></h3>
 								<p>One stop for glancing</p>
 							</article>
 						</div>
