--- a/blogs.html
+++ b/blogs.html
@@ -17,7 +17,7 @@
     <div class="col-6 col-6-medium col-12-small">
         <article class="box style2">
             <a href="blogs/python-cheetsheet/index.html" class="image featured"><img src="images/python.PNG" alt="Python-CheatSheet" /></a>
-            <h3><a href="https://github.com/PrakashBhasagi/Python-CheatSheet">Python Cheat Sheet</a></h3>
+            <h3><a href="blogs/python-cheetsheet/index.html">Python Cheat Sheet</a></h3>
             <p>One stop for glancing</p>
         </article>
     </div>
@@ -31,7 +31,7 @@
     <div class="col-6 col-6-medium col-12-small">
         <article class="box style2">
             <a href="blogs/getting_started/index.html" class="image featured"><img src="images/springbooot.PNG" alt="SpringBoot-Get-Started"/></a>
-            <h3><a href="https://github.com/PrakashBhasagi/SpringBoot-Get-Started">SpringBoot getting Started</a></h3>
+            <h3><a href="blogs/getting_started/index.html">SpringBoot getting Started</a></h3>
             <p>One stop for glancing</p>
         </article>
     </div>
